templates/servicemonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-metrics
  namespace: elasticsearch
  labels:
    app: elasticsearch-master
spec:
  selector:
    app: elasticsearch-master
  ports:
    - name: metrics
      port: 9200
      targetPort: 9200
  clusterIP: None
