templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elasticsearch-master
  namespace: elasticsearch
spec:
  podSelector:
    matchLabels:
      app: elasticsearch-master
  policyTypes:
    - Ingress
  ingress:
    # ES transport: only from other ES pods
    - from:
        - podSelector:
            matchLabels:
              app: elasticsearch-master
      ports:
        - port: 9300
          protocol: TCP
    # ES HTTP API: only from ingress-nginx
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - port: 9200
          protocol: TCP
